--- a/src/Components/NewsFeed/NewsFeed.module.css
+++ b/src/Components/NewsFeed/NewsFeed.module.css
@@ -1,6 +1,6 @@
 .posterName {
   font-weight: bold;
-  color: #7b6857;
+  color: #f5efe0;
 }
 .headmasterName {
   color: #fff !important;
