--- a/src/Components/OnlineUsers/OnlineUsers.module.css
+++ b/src/Components/OnlineUsers/OnlineUsers.module.css
@@ -1,6 +1,6 @@
 .userName {
   font-weight: bold;
-  color: #7B6857;
+  color: #f5efe0;
   margin-right: 8px;
 }
 .headmasterName {
