--- a/src/Pages/Forum/Forum.module.css
+++ b/src/Pages/Forum/Forum.module.css
@@ -175,7 +175,7 @@
 }
 .posterName {
   font-weight: 600;
-  color: #7b6857;
+  color: #f5efe0;
 }
 .headmasterName {
   color: #fff !important;
